--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
-venv/
+# Python
 __pycache__/
-*.pyc
-*.log
-.DS_Store
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Base de datos
+*.db
+*.sqlite3
+
+# Archivos de sesión
+*.session
+
+# Archivos de configuración local
 .env
+.venv
+env/
+venv/
+ENV/
+
+# Archivos de IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Archivos de sistema
+.DS_Store
+Thumbs.db
+
+# Archivos específicos del proyecto
+app/users.json
+hormiguero.pem
